//apply plugin: "java"

buildscript {
    ext {
        arcHash = '128'
        mindustryVersion = 'v129.1'
        mindustryVersionAnnotations = 'v126.2'
        arcModule = { String name ->
            //skip to last submodule
            if (name.contains(':')) name = name.split(':').last()
            return "com.github.Anuken.Arc:$name:$arcHash"
        }
    }
    repositories {
        mavenLocal()
        mavenCentral()
        google()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url 'https://jitpack.io' }
    }

    dependencies {
//        classpath 'commons-io:commons-io:2.5'
//        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
//        classpath "com.github.anuken:packr:-SNAPSHOT"
        classpath arcModule("packer")
        classpath arcModule("g3d")
        classpath "com.github.Anuken.Arc:arc-core:$mindustryVersion"
        classpath "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
        classpath "com.github.Anuken.Mindustry:core:$mindustryVersion"
        classpath "com.github.Anuken.Mindustry:tools:$mindustryVersion"
        classpath "com.github.Anuken.Arc:packer:$arcHash"
    }
}
plugins {
    id 'java'
    id 'maven-publish'
}
version '1.0'


repositories {
    mavenCentral()
    maven { url 'https://www.jitpack.io' }
}
ext {
    //the build number that this mod is made for
    //version of SDK you will be using
    sdkVersion = '30'
    sdkRoot = System.getenv("ANDROID_HOME")

    doExec = { cmd ->
        def proc = cmd.execute(null, new File("$buildDir/libs"))
        proc.waitForProcessOutput(System.out, System.err)
    }
    arcModule = { String name ->
        //skip to last submodule
        if (name.contains(':')) name = name.split(':').last()
        return "com.github.Anuken.Arc:$name:$arcHash"
    }
}
dependencies {
    implementation arcModule('arc-core')
    implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
    implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
    implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
    implementation 'com.squareup:javapoet:1.12.1'

}
allprojects {
    apply plugin: 'maven-publish'
    version = 'release'
    group = 'com.github.Zelaux'
    tasks.withType(JavaCompile) {
        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
            options.compilerArgs.addAll(['--release', '8'])
        }
    }


    repositories {
        mavenLocal()
        google()
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
        maven { url 'https://jitpack.io' }
        jcenter()
    }
    tasks.withType(JavaCompile) {
        targetCompatibility = 8
        sourceCompatibility = JavaVersion.VERSION_16
        options.encoding = "UTF-8"
        options.compilerArgs += ["-Xlint:deprecation"]
        options.forkOptions.jvmArgs.addAll([
//                '--illegal-access=permit',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
//                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
        ])
    }
}
configure(project(":core")) {

    tasks.withType(JavaCompile) {
        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
            options.compilerArgs.addAll(['--release', '8'])
        }
        sourceCompatibility = 8
        targetCompatibility = 8
        doFirst {
//            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
        }
    }

    tasks.withType(Javadoc) {
        options {
//            addStringOption('Xdoclint:none', '-quiet')
            addStringOption('-release', '8')
        }
    }

}
project(":core") {
    apply plugin: "java-library"

    compileJava.options.fork = true

    task preGen {
        outputs.upToDateWhen { false }
//        generateLocales()
//        writeVersion()
//        writeProcessors()
//        writePlugins()
    }

    task copyChangelog {
    }

    dependencies {
        compileJava.dependsOn(preGen)

        api "org.lz4:lz4-java:1.4.1"
        implementation arcModule("arc-core")
        implementation arcModule("extensions:freetype")
        implementation arcModule("extensions:g3d")
        implementation arcModule("extensions:fx")
        implementation arcModule("extensions:arcnet")
//        compileOnly "com.github.Anuken.Mindustry:entities:$mindustryVersion"
        implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
        implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
//        api "com.github.Anuken:rhino:$rhinoVersion"

//        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'

    }

    afterEvaluate {
        task mergedJavadoc(type: Javadoc) {
            if (true) return null;
            def blacklist = [project(":annotations")]
            if (findProject(":android") != null) {
                blacklist += project(":android")
            }

            source rootProject.subprojects.collect { project ->
                if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
                    return project.sourceSets.main.allJava
                }
            }

            classpath = files(rootProject.subprojects.collect { project ->
                if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
                    return project.sourceSets.main.compileClasspath
                }
            })
            destinationDir = new File(buildDir, 'javadoc')
        }
    }
    jar {
        exclude("gas/entities/comp/**")
        exclude("gas/entities/compByAnuke/**")
    }
}
configure([":core"/*, ":desktop", ":server", ":tools"*/].collect{project(it)}){
    java{
//        withJavadocJar()
        withSourcesJar()
    }

    publishing{
        publications{
            maven(MavenPublication){
                from components.java
            }
        }
    }
}
task jarAndroid {
    dependsOn "jar"

    doLast {
        //collect dependencies needed for desugaring
        def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
        def dependencies = files.collect { "--classpath $it.path" }.join(" ")

        //dex and desugar files - this requires d8 in your PATH
        doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar")
    }
}
jar {
    dependsOn "core:jar"
    archiveFileName = "${project.archivesBaseName}Desktop.jar"
    from {
//        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
        project(":core").fileTree("build/libs/core.jar").collect { it.isDirectory() ? it : zipTree(it) }
    }

    from(rootDir) {
        include "mod.hjson"
    }

    from("core/assets/") {
        include "**"
    }
    doLast {
//        doExec("python ../../cmp.py")
    }
}
task deploy(type: Jar) {
    dependsOn jarAndroid
    dependsOn jar
    archiveFileName = "${project.archivesBaseName}.jar"

    from { [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }

    doLast {
        delete { delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar" }
        delete { delete "$buildDir/libs/${project.archivesBaseName}Android.jar" }
    }
}
